<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/loginapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/iv_Logo"
        android:layout_width="225dp"
        android:layout_height="89dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/txSesion"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_Logo" />

    <TextView
        android:id="@+id/tv_LoginDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/txDescripcion"
        android:textColor="@color/text_dim"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="384dp"
        android:layout_height="171dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_LoginDescripcion">

        <TextView
            android:id="@+id/tv_Mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txEmail"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etv_Mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#B0FFFFFF" />

        <TextView
            android:id="@+id/tv_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txPassword"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etv_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#B0FFFFFF" />

        <CheckBox
            android:id="@+id/btn_Remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txRecuerdame"
            android:textColor="@color/text_dim" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange_dark"
        android:text="@string/btnEntrar"
        android:textColor="@color/blue_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <TextView
        android:id="@+id/tv_LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txRegistro"
        android:textColor="@color/text_muted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />


</androidx.constraintlayout.widget.ConstraintLayout>