<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".HistorialActivity">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue_mid"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_TituloHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srTitulo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginEnd="28dp"/>

        <TextView
            android:id="@+id/tv_Subtitulado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srSubtitulo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_dim"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/layoutBotones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- TEXTO VACÍO -->
        <TextView
            android:id="@+id/tvVacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/srVacio"
            android:textColor="@color/text_dim"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <!-- LISTA -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/listaHistorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_ActualizarHistorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/srActualizar"
            android:backgroundTint="@color/blue_light"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_VolverBottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/srVolver"
            android:backgroundTint="@color/orange_dark"
            android:textColor="@color/blue_dark"
            android:textStyle="bold"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>